<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/tema_background"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/tema"
        android:layout_margin="5dp"
        />


    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/titulo"
        android:layout_alignBaseline="@+id/tema_background"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/txt_sub_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sub_titulo"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_below="@+id/txt_titulo"
        android:layout_alignStart="@+id/txt_titulo"

        />

    <EditText
        android:id="@+id/edt_nota01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota01"
        android:padding="15dp"
        android:maxLength="4"
        android:inputType="numberDecimal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/tema_background"
        android:background="@drawable/rounded"

        />
    <EditText
        android:id="@+id/edt_nota02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota02"
        android:padding="15dp"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded"
        android:layout_below="@+id/edt_nota01"
        />

    <EditText
        android:id="@+id/edt_nota03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota03"
        android:padding="15dp"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded"
        android:layout_below="@+id/edt_nota02"
        />

    <EditText
        android:id="@+id/edt_nota04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota04"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:maxLength="4"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded"
        android:layout_below="@+id/edt_nota03"
        />

    <EditText
        android:id="@+id/edt_qtd_faltas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/faltas"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:maxLength="2"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded"
        android:layout_below="@+id/edt_nota04"

        />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:backgroundTint="@color/primaryColor"
        app:shapeAppearanceOverlay="@style/button"
        android:text="Calcular"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:padding="15dp"
        android:layout_below="@+id/edt_qtd_faltas"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Resultado Final"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:layout_below="@+id/btn_calcular"
        android:layout_alignStart="@+id/btn_calcular"
        />
    <TextView
        android:id="@+id/txt_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Media Final"
        android:paddingStart="40dp"
        android:layout_below="@+id/txt_resultado"
        android:visibility="visible"
        android:layout_alignStart="@+id/btn_calcular"
        />

    <ImageView
        android:id="@+id/ic_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/btn_calcular"
        android:layout_marginTop="25dp"
        android:src="@mipmap/ic_btn"
        android:layout_below="@+id/btn_calcular"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/ic_check"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/btn_calcular"
        android:layout_marginTop="25dp"
        android:src="@mipmap/ic_btn_check"
        android:layout_below="@+id/btn_calcular"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/ic_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/btn_calcular"
        android:layout_marginTop="25dp"
        android:src="@mipmap/ic_btn_close"
        android:layout_below="@+id/btn_calcular"
        android:visibility="gone"/>
    />



</RelativeLayout>